[package]
name = "stableprop"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT OR Apache-2.0"
description = "Sampling-free uncertainty propagation through neural networks (analytic Gaussian and Cauchy)."
repository = "https://github.com/arclabs561/stableprop"
homepage = "https://github.com/arclabs561/stableprop"
documentation = "https://docs.rs/stableprop"
readme = "README.md"
keywords = ["uncertainty", "moment-propagation", "neural-network", "gaussian", "calibration"]
categories = ["science", "algorithms"]
publish = true

[workspace]

[features]
default = []
# Burn-tensor backend: differentiable, batched moment propagation.
burn = ["dep:burn"]

[dependencies]
burn = { version = "0.20.0", default-features = false, features = ["std"], optional = true }

[dev-dependencies]
# autodiff is needed by the cora_uncertainty example's training loop; cargo
# unifies this with the optional `burn` dep when building stableprop's examples.
burn = { version = "0.20.0", default-features = false, features = ["std", "autodiff"] }
burn-ndarray = "0.20.0"
propago = "0.2"

[[example]]
name = "gcn_uncertainty"
required-features = ["burn"]

[[example]]
name = "cora_uncertainty"
required-features = ["burn"]

[[example]]
name = "regression_intervals"
required-features = ["burn"]

[[example]]
name = "conformal_intervals"
required-features = ["burn"]

[package.metadata.docs.rs]
features = ["burn"]
